--- a/NLP_Project_2_models.ipynb
+++ b/NLP_Project_2_models.ipynb
@@ -195,6 +195,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tokenizer_config.json: 100%|██████████| 26.0/26.0 [00:00<00:00, 13.0kB/s]\n",
+      "c:\\Users\\sraps\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\huggingface_hub\\file_download.py:149: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\sraps\\.cache\\huggingface\\hub\\models--microsoft--DialoGPT-large. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "config.json: 100%|██████████| 642/642 [00:00<?, ?B/s] \n",
+      "vocab.json: 100%|██████████| 1.04M/1.04M [00:00<00:00, 2.71MB/s]\n",
+      "merges.txt: 100%|██████████| 456k/456k [00:00<00:00, 5.20MB/s]\n",
+      "pytorch_model.bin: 100%|██████████| 1.75G/1.75G [01:37<00:00, 17.9MB/s]\n",
+      "generation_config.json: 100%|██████████| 124/124 [00:00<00:00, 62.0kB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
+    "\n",
+    "# Charger le tokenizer et le modèle\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/DialoGPT-large\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"microsoft/DialoGPT-large\")\n",
+    "\n",
+    "# Initialiser la pipeline de génération de texte\n",
+    "dialogue_generator = pipeline('text-generation', model=model, tokenizer=tokenizer)\n",
+    "\n",
+    "def generate_dialogue_insights(reviews):\n",
+    "    combined_reviews = \" \".join(reviews[:5])  # Limiter à 5 avis pour une analyse concise\n",
+    "    prompt = (\n",
+    "        f\"Customer Reviews: {combined_reviews}\\n\"\n",
+    "        f\"AI: Based on these reviews, the key weaknesses of the restaurant are :\"\n",
+    "    )\n",
+    "\n",
+    "    # Générer une réponse basée sur les avis\n",
+    "    generated_response = dialogue_generator(prompt, max_length=200, num_return_sequences=1)\n",
+    "    return generated_response[0]['generated_text']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Business ID: 123\n",
+      "Insights:\n",
+      "Customer Reviews: Great service but the food was bland. Loved the ambiance and the dessert, but the main course was too salty.\n",
+      "AI: Based on these reviews, the key weaknesses of the restaurant are : 1. Saltiness 2. Saltiness 3. Saltiness 4. Saltiness 5. Saltiness 6. Saltiness 7. Saltiness 8. Saltiness 9. Saltiness\n",
+      "\n",
+      "Business ID: 456\n",
+      "Insights:\n",
+      "Customer Reviews: The waiter was rude. The steak was fantastic, but the room was too noisy. Amazing cocktails and friendly staff, but the price is too high.\n",
+      "AI: Based on these reviews, the key weaknesses of the restaurant are : 1. The food is not great 2. The service is not great\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Grouper les avis par 'business_id' et générer des insights\n",
+    "grouped_reviews = df.groupby('business_id')['text'].apply(list)\n",
+    "insights_by_business = grouped_reviews.apply(generate_dialogue_insights)\n",
+    "\n",
+    "# Affichage des insights\n",
+    "for business_id, insights in insights_by_business.items():\n",
+    "    print(f\"Business ID: {business_id}\\nInsights:\\n{insights}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
