--- a/NLP_Project2_preprocessing.ipynb
+++ b/NLP_Project2_preprocessing.ipynb
@@ -970,11 +970,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review_df[['text', 'corrected_text','translated_text']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "review_df.to_csv(\"reviews_fin.csv\", sep=';', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = review_df['rating'].value_counts().sort_index().plot(kind='bar', title='Count of Reviews by Stars',\n",
+    "                                            figsize=(10,5))\n",
+    "ax.set_xlabel('Reviews Star')\n",
+    "plt.show()"
    ]
   },
   {
@@ -1055,6 +1083,33 @@
     "plt.ylabel('Nombre d\\'Avis')\n",
     "plt.xticks(rotation=0)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'label' in review_df.columns and 'sentiment_vader' in review_df.columns:\n",
+    "    # Créer un dictionnaire pour mapper les labels numériques aux étiquettes de sentiment\n",
+    "    label_map = {0: 'negative', 1: 'neutral', 2: 'positive'}\n",
+    "    review_df['label_mapped'] = review_df['label'].map(label_map)\n",
+    "\n",
+    "    # Préparer les données pour la visualisation\n",
+    "    label_counts = review_df['label_mapped'].value_counts()\n",
+    "    vader_counts = review_df['sentiment_vader'].value_counts()\n",
+    "\n",
+    "    # Tracer le graphique\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    sns.barplot(x=label_counts.index, y=label_counts.values, label='Labels')\n",
+    "    sns.barplot(x=vader_counts.index, y=vader_counts.values, label='Vader Sentiment', alpha=0.6)\n",
+    "    plt.title(\"Comparaison entre les labels et le sentiment Vader\")\n",
+    "    plt.ylabel(\"Nombre d'observations\")\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"Les colonnes nécessaires ne sont pas présentes dans le DataFrame.\")"
    ]
   },
   {
