--- a/NLP_Project2_preprocessing.ipynb
+++ b/NLP_Project2_preprocessing.ipynb
@@ -1328,7 +1328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "review_df.to_csv(\"reviews_fin.csv\", sep=';', index=False)"
+    "review_df.to_csv(\"reviews_preprocess.csv\", sep=';', index=False)"
    ]
   },
   {
