--- a/NLP_Project_2_Analysis.ipynb
+++ b/NLP_Project_2_Analysis.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "restaurant_df=pd.read_csv('restaurants1.csv')\n",
-    "review_df=pd.read_csv('reviews_fin.csv', sep=';')"
+    "review_df=pd.read_csv('reviews_preprocess.csv', sep=';')"
    ]
   },
   {
