--- a/NLP_Project_2_models.ipynb
+++ b/NLP_Project_2_models.ipynb
@@ -37,9 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sraps\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from transformers import pipeline, set_seed\n",
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,11 +91,19 @@
       "Insights:\n",
       "Here are some customer reviews on a restaurant deduct the restaurant's asset's.\n",
       "\n",
-      "Great service but the food was bland. Loved the ambiance and the dessert, but the main course was too salty. The only thing that really helped the mood was the customer service and they would also take your order in person.\n",
+      "Great service but the food was bland. Loved the ambiance and the dessert, but the main course was too salty.\n",
       "\n",
-      "I was trying the pizza for my birthday in the morning. My daughter couldn't tell me in any way that a 5 year old could make one that has no idea what it is. It's like when you put on your jacket and see what it is. A 9 year old kid didn't even know there was pizza in his hand at lunch. The waitress came back and said there was a 4 year old who was not there. It was one of the most frustrating experiences of my life.\n",
       "\n",
-      "The food was also terrible, most dishes included. I've been here for about ten years, but I had been here for six years and I wouldn't say what I enjoyed better than pizza. It was just flat out awful and the food was not good. It was very bad tasting too and was served from a small bag that would take away from the taste. I'll never come back from this place.\n",
+      "Great menu, great food! The service was good, the seating was good, the food was good, the drink is good, the waiters were friendly, and the staff was nice. We would highly recommend this place to anybody. If you live in the Bay Area they're not so bad either.\n",
+      "\n",
+      "\n",
+      "Very nice menu, good service but service was very slow. I guess this restaurant is a newbie to the business, and they just want to try and make an honest effort to make the customer happy :) but the waiter and waitress who work in the front office did help a lot when I arrived and didn't take care of things really quickly.\n",
+      "\n",
+      "\n",
+      "Great experience at a great restaurant in Oakland. I would like to think that the food was fresh and fresh and delicious because that usually means that the service was fine just wait for time, get it a place that works. Great place that will do good job with your order.\n",
+      "\n",
+      "\n",
+      "So good! I ordered the \"Luna Bar\", for which they said\n",
       "\n",
       "Business ID: 456\n",
       "Insights:\n",
@@ -94,9 +111,13 @@
       "\n",
       "The waiter was rude. The steak was fantastic, but the room was too noisy. Amazing cocktails and friendly staff, but the price is too high.\n",
       "\n",
-      "I came to a local diner and they offered a free lunch. It was a bit like this. The food in the diner was delicious too. The menu was so fresh and varied and not to dissimilar to a typical restaurant. I ordered the \"Chicken Bolognese\" ($2), which was definitely a good thing, but I don't think I got that much for my dollar. The egg rolls were good too.\n",
       "\n",
-      "I'll always be an eatery fan of KFC and can't wait to try it again. I found it because the service on an almost empty lot felt as though the waitress was always there. The food was good as well. I'm not a huge KFC fan that I had to wait in between tables waiting in a bar and eating. However, I am happy to say that I enjoyed a good portion of the chicken burrito order, which I was told was probably $2 for the portion with a \"freebie\" that I ordered. I also\n",
+      "The place to meet you is amazing in the kitchen you have to leave at a specific time and after several reservations, you have to leave. If we went there, we'd be leaving the entire place at 10pm. Unfortunately though, there was no parking available and the restaurant was packed.\n",
+      "\n",
+      "\n",
+      "I ordered the shrimp tacos which you can see above. I don't know where it is, but they serve it in Spanish. There were two to choose from. The green hare and the red hare. The fish tacos were amazing. I ordered the fried chicken which was cooked very well and the fish taco was fantastic too but the shrimp was too soft and fried. When I ordered the fried chicken I wasn't sure which had the better taste due to the texture. The other meal was super good and really was fast. I really appreciate the staff and wait staff for good service.\n",
+      "\n",
+      "So, this is the restaurant that gets my food. This was by far the fastest and most expensive way\n",
       "\n"
      ]
     }
@@ -104,20 +125,16 @@
    "source": [
     "# Initialiser le modèle GPT-2 \n",
     "generator = pipeline('text-generation', model='gpt2')\n",
-    "\n",
     "def generate_insights(reviews):\n",
     "    combined_reviews = \" \".join(reviews)\n",
-    "    prompt = (f\"Here are some customer reviews on a restaurant deduct the restaurant's asset's.\\n\\n{combined_reviews}\")\n",
+    "    prompt = (f\"Here are some customer reviews on a restaurant deduct the restaurant's asset's.\\n\\n{combined_reviews}\\n\\n\")\n",
     "    \n",
     "    summary = generator(prompt,max_length=250, num_return_sequences=1)\n",
     "    return summary[0]['generated_text']\n",
-    "\n",
     "# Grouper les avis par 'business_id'\n",
     "grouped_reviews = df.groupby('business_id')['text'].apply(list)\n",
-    "\n",
     "# Générer des insights pour chaque groupe d'avis\n",
     "insights_by_business = grouped_reviews.apply(generate_insights)\n",
-    "\n",
     "# Afficher les insights\n",
     "for business_id, insights in insights_by_business.items():\n",
     "    print(f\"Business ID: {business_id}\\nInsights:\\n{insights}\\n\")\n"
@@ -199,6 +216,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dialo GPT"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -230,7 +254,7 @@
     "dialogue_generator = pipeline('text-generation', model=model, tokenizer=tokenizer)\n",
     "\n",
     "def generate_dialogue_insights(reviews):\n",
-    "    combined_reviews = \" \".join(reviews[:5])  # Limiter à 5 avis pour une analyse concise\n",
+    "    combined_reviews = \" \".join(reviews[:5])  \n",
     "    prompt = (\n",
     "        f\"Customer Reviews: {combined_reviews}\\n\"\n",
     "        f\"AI: Based on these reviews, the key weaknesses of the restaurant are :\"\n",
